samples/_failures_safe/1761514275_844115_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cd92536.c: In function ‘main’:
./samples/SAFE/__tmp_4cd92536.c:151:12: error: missing terminating " character
  151 |     printf("Comp
      |            ^~~~~
./samples/SAFE/__tmp_4cd92536.c:151:5: error: expected expression at end of input
  151 |     printf("Comp
      |     ^~~~~~
./samples/SAFE/__tmp_4cd92536.c:151:5: error: expected declaration or statement at end of input
